# Snake-SFML

./: CMakeLists.txt  main.cpp  snake.cpp  snake.h  snakejoint.cpp  snakejoint.h
entity/: entity.cpp  entity.h
